--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,13 +1,21 @@
+/***************************
+    ALL PAGE ELEMENTS
+***************************/
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
 }
+
+/***************************
+          HEADER
+***************************/
 .header-container {
  color: black;
   border-bottom: black;
-  border-radius: 25%;
 }
+
 .jumbotron {
   text-align: center;
   border-bottom: solid;
@@ -16,9 +24,11 @@ body {
 .description {
   white-space: pre-wrap;
 }
-.input-container{
+
+.input- container{
 
 }
+
 input[type=text], select {
   width: 100%;
   padding: 12px 20px;
@@ -34,9 +44,11 @@ input[type=text], select {
   height: 80px;
   border-top: 1px solid white;
 }
+
 .model-container {
   padding-top: 50%;
 }
+
 .hour {
   background-color: #ffffff;
   color: #000000;
@@ -57,22 +69,22 @@ input[type=text], select {
 }
 
 .model-container {
-display: none;
-position: fixed;
-z-index: 1;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-overflow: auto;
-background-color: Orgb(0,0,0,0.4);
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0,0.4);
 }
 
 .modal {
-background-color: #fefefe;
-margin: 15% auto;
-padding: 20px;
-width: 80%;
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  width: 80%;
 }
 
 .modal—container--close {
@@ -80,33 +92,64 @@ width: 80%;
   float: right;
   font-size: 28px;
   font-weight: bold
-  }
+}
 
-  .modal—container--close:hover,
-  .modal—container--close:focus {
+.modal—container--close:hover,
+.modal—container--close:focus {
   color: ❑black;
   text-decoration: none;
   cursor: pointer;
-  }
+}
 
-  .event {
-    padding-top: 8px;
-    font-size: 14px;
-    position: absolute;
-    height: 100%;
-  }
-  .blue-color {
-    color:blue;
-    }
-    .green-color {
-    color:green;
-    }
-    .teal-color {
-    color:teal;
-    }
-    .yellow-color {
-    color:yellow;
-    }
-    .red-color {
-    color:red;
-    }
+.event {
+  padding-top: 8px;
+  font-size: 14px;
+  position: absolute;
+  height: 100%;
+}
+
+/***************************
+        COLORS
+***************************/
+.blue-color {
+  color:blue;
+}
+
+.green-color {
+  color:green;
+}
+
+.teal-color {
+  color:teal;
+}
+
+.yellow-color {
+  color:yellow;
+}
+
+.red-color {
+  color:red;
+}
+
+/***************************
+     STYLE TIME COLUMN
+***************************/
+
+ p span{
+   font-weight: bolder;
+ }
+
+ .hour{
+   font-weight: bolder;
+   font-family: sans-serif;
+ }
+
+ /* .hour{
+   border-style: dashed;
+   padding: 10px;
+   padding-top: 15px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+   align-items: center;
+   height: 80px;
+ } */
